@@ -5,6 +5,8 @@ CHANGES
 4.0.0 (unreleased)
 ------------------
 
+- Added Sphinx documentation:  moved doctest examples to API reference.
+
 - Added 'setup.py docs' alias (installs ``Sphinx`` and dependencies).
 
 - Added 'setup.py dev' alias (runs ``setup.py develop`` plus installs
